--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@fhir-typescript/r4-core": "0.0.12-beta.18",
     "fhirclient": "^2.4.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
